# moe-plugins

./: LICENSE  README.md  album_art.py  album_bit_depth.py  album_composer.py  album_type.py  bucket.py  confirm_album_path.py  disc_and_track.py  discogs.py  edit_tags.py  filter_extras.py  go_back_import.py  interactive_matching.py  label_catalognum.py  media_encoding.py  moe_config.toml  moe_hooks.md  monolith.py  organize_extras.py  organize_extras_interactive.py  pyproject.toml  rateyourmusic.py  rateyourmusic_genre_copier.user.js  redoflacs_compress.py  redoflacs_test.py  test_flac.py  the.py  use_file_metadata.py  year_reissue.py
