[tool.poetry]
name = "moe-plugins"
version = "0.1.0"
description = ""
authors = ["ali-ramadhan <ali.hh.ramadhan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
moe = "^2.1.3"
moe-musicbrainz = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
