[project]
name = "moe-plugins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.3.0",
    "moe>=2.3.0",
    "moe-musicbrainz>=1.0.2",
    "pillow>=11.2.1",
    "python3-discogs-client>=2.8",
    "requests-oauthlib>=2.0.0",
]

[tool.uv.sources]
moe-musicbrainz = { path = "../../code/moe_musicbrainz", editable = true }
moe = { path = "../../code/Moe", editable = true }
