[project]
name = "moe-plugins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.3.0",
    "moe>=2.5.0",
    "pillow>=11.2.1",
    "python3-discogs-client>=2.8",
    "requests-oauthlib>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [ # See: https://docs.astral.sh/ruff/rules/
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "I",    # isort imports
    "UP",   # pyupgrade
    "S",    # flake8-bandit
    "T20",  # flake8-print
    "PERF", # perflint
    "NPY",  # NumPy-specific rules
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "RUF",  # Ruff-specific rules
    "A",    # flake8-builtins
    "PTH",  # flake8-pathlib
    "BLE",  # flake8-blind-except
    "ARG",  # flake8-unused-arguments
    "ISC",  # flake8-implicit-str-concat
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = true
